--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/hiber
-spring.datasource.bookname=admintest
+spring.datasource.username=admintest
 spring.datasource.password=test
 
 spring.jpa.database=POSTGRESQL
@@ -10,3 +10,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialec
 spring.jpa.properties.hibernate.hbm2ddl.auto=update
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+spring.mvc.view.prefix=/WEB-INF/jsp/
+spring.mvc.view.suffix=.jsp
